reorganize enums + start form/enum validation
