# models/branch.go
@@ -2,6 +2,7 @@ package models
 
 import (
 	"encoding/json"
+	"slices"
 
 	"gitlab.ewi.tudelft.nl/cse2000-software-project/2023-2024/cluster-v/17b/alexandria-backend/models/tags"
 	"gorm.io/gorm"
@@ -15,13 +16,24 @@ const (
 	Failure RenderStatus = "failure"
 )
 
-type BranchReviewStatus string
+func (enum *RenderStatus) IsValid() bool {
+	valid := []RenderStatus{Success, Pending, Failure}
+	return slices.Contains(valid, *enum)
+}
+
+// The branch's aggregated review status, derived from its individual reviews' statuses
+type BranchOverallReviewStatus string
 
 const (
-	BranchOpenForReview BranchReviewStatus = "open for review"
-	BranchPeerReviewed  BranchReviewStatus = "peer reviewed"
-	BranchRejected      BranchReviewStatus = "rejected"
+	BranchOpenForReview BranchOverallReviewStatus = "open for review"
+	BranchPeerReviewed  BranchOverallReviewStatus = "peer reviewed"
+	BranchRejected      BranchOverallReviewStatus = "rejected"
 )
+
+func (enum *BranchOverallReviewStatus) IsValid() bool {
+	valid := []BranchOverallReviewStatus{BranchOpenForReview, BranchPeerReviewed, BranchRejected}
+	return slices.Contains(valid, *enum)
+}
 
 type Branch struct {
 	gorm.Model
@@ -31,7 +43,7 @@ type Branch struct {
 
 	NewPostTitle string
 
-	UpdatedCompletionStatus tags.CompletionStatus
+	UpdatedCompletionStatus ProjectCompletionStatus
 	UpdatedScientificFields []tags.ScientificField `gorm:"serializer:json"`
 
 	/////////////////////////////////////////////
@@ -53,14 +65,14 @@ type Branch struct {
 	BranchTitle string
 
 	RenderStatus       RenderStatus
-	BranchReviewStatus BranchReviewStatus
+	BranchReviewStatus BranchOverallReviewStatus
 }
 
 type BranchDTO struct {
 	ID uint
 	// MR's proposed changes
 	NewPostTitle            string
-	UpdatedCompletionStatus tags.CompletionStatus
+	UpdatedCompletionStatus ProjectCompletionStatus
 	UpdatedScientificFields []tags.ScientificField
 	// MR metadata
 	CollaboratorIDs    []uint
@@ -69,7 +81,7 @@ type BranchDTO struct {
 	BranchTitle        string
 	RenderStatus       RenderStatus
 	DiscussionIDs      []uint
-	BranchReviewStatus BranchReviewStatus
+	BranchReviewStatus BranchOverallReviewStatus
 }
 
 func (model *Branch) GetID() uint {
